# concepterklaas

./: .envrc  README.md  app.py  flake.nix  justfile  pyproject.toml
app/: __init__.py  models.py  routes.py  utils.py
app/static/: style.css
app/templates/: admin.html  base.html  change_concept.html  dashboard.html  event.html  index.html  new.html  refer.html
app/templates/admin/: event.html  index.html  login.html
app/templates/new-event/: step1.html  step2.html  step3.html
app/templates/participant/: change.html  index.html  refer.html
templates/: admin.html  base.html  dashboard.html  index.html  new.html
