[project]
name = "cklaas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
]

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["ALL"]
ignore = [
  "S", "D"
]

[tool.ruff.format]
