[project]
name = "cklaas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "djlint>=1.34.1",
]

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["ALL"]
ignore = [
  "S", "D"
]

[tool.ruff.format]

[tool.djlint]
profile = "jinja"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
]
