[project]
name = "cklaas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "heroicons[jinja]>=2.13.0",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "djlint>=1.34.1",
]

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["ALL"]
ignore = [
  "S", "D", "COM"
]

[tool.ruff.format]

[tool.djlint]
profile = "jinja"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
]
